--- a/source/sass/blocks/aligner.scss
+++ b/source/sass/blocks/aligner.scss
@@ -30,10 +30,10 @@
     &--form {
       width: 100%;
     }
-    &--gallery {
+    &--panorama {
       width: 940px;
     }
-    &--gallery {
+    &--editor {
       width: 940px;
     }
   }
