--- a/source/sass/blocks/caption.scss
+++ b/source/sass/blocks/caption.scss
@@ -89,7 +89,8 @@
       }
 
       .caption__like {
-        margin-left: 20px;
+        margin-left: 18px;
+        margin-right: 1px;
       }
     }
 
